fix: add outbound unit tests and fix some bugs.